<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Doctor's Name -->
        <EditText
            android:id="@+id/enter_doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Doctor Name"
            android:inputType="textPersonName" />

        <!-- Specialisation -->
        <EditText
            android:id="@+id/enter_spec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Specialisation"
            android:inputType="text" />

        <!-- Phone Number -->
        <EditText
            android:id="@+id/enter_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:inputType="phone" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/add_doctor_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="Add Doctor" />

            <Button
                android:id="@+id/update_doctor_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="Update Doctor" />

            <Button
                android:id="@+id/delete_doctor_btn"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="Delete Doctor" />
        </LinearLayout>

        <!-- Doctors List -->
        <ListView
            android:id="@+id/doctor_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
