<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Patient Name -->
    <EditText
        android:id="@+id/enter_patient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Patient Name"
        android:inputType="textPersonName" />

    <!-- Patient Diagnosis -->
    <EditText
        android:id="@+id/enter_diagnose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Diagnose"
        android:inputType="text" />

    <!-- Patient Phone Number -->
    <EditText
        android:id="@+id/enter_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <!-- Buttons -->
        <Button
            android:id="@+id/add_patient_btn"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="Add Patient" />

        <Button
            android:id="@+id/update_patient_btn"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:text="Update Patient" />

        <Button
            android:id="@+id/delete_patient_btn"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="Delete Patient" />
    </LinearLayout>

    <!-- ListView -->
    <ListView
        android:id="@+id/patient_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />
</LinearLayout>
